--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,34 +1,156 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page2";
 }
+<div class="home-page">
+    <section class="section hero">
+                <div class="container">
+                   <div class="row my-5">
+                       <div class="col"><img src="/images/bidvest-club-mccarthy-logo.png" alt="" class="img-fluid mt-5"></div>
+                   </div>
+                    <div class="row my-5 d-flex align-items-center text-center">
+                        <div class="col-2">
+                            <img src="/images/medical-assistance.png" alt="" class="img-fluid">
+                            <p>24/7 Professional Emergency Assistance on road or at home</p>
+                        </div> <div class="col-2">
+                            <img src="/images/giveaways.png" alt="" class="img-fluid">
+                            <p>Exclusive Giveaways and Discount on travel.</p>
+                        </div> 
+                        <div class="col-2">
+                            <img src="/images/gps-app.png" alt="" class="img-fluid">
+                            <p>McCarthy App with GPS to help get our emergency team faster to you.</p>
+                        </div> 
+                        <div class="col-2">
+                            <img src="/images/emergency-assistance.png" alt="" class="img-fluid">
+                            <p>Medical Emergency Assistance</p>
+                        </div> 
+                        <div class="col-2">
+                            <img src="/images/legal.png" alt="" class="img-fluid">
+                            <p>Legal Advice Assistance.</p>
+                        </div>
+                    </div>
+                    <div class="row my-5">
+                        <div class="col">
+                            <a href="javascript:void(0)" class="btn btn-secondary mb-3">Join Bidvest Club McCarthy</a>
+                            <p>Get 1 Year free membership with every Lexus purchase</p>
+                        </div>
+                    </div>
+                </div>
+    </section> 
+    <section class="models">
+        <div class="container-fluid">
+            <div class="row mt-5">
+                <div class="col-4">
+                    <h2 class="display-4">Sedan</h2>
+                    <p class="h5 light">Best of all worlds</p>
+                    <span></span>
+                </div>
+                <div class="col-4">
+                    <h2 class="display-4">Suvs</h2>
+                    <p class="h5 light">Luxury Expanded</p>
+                    <span></span>
+                </div>
+                <div class="col-4">
+                    <h2 class="display-4">Coupes</h2>
+                    <p class="h5 light">More than a car. A feeling</p>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bidvest-mccarthy">
+       <div class="container">
+            <div class="row py-5">
+                <div class="col">
+                    <img src="/images/bidvest-club-mccarthy-logo.png" alt="" height="50" class="mb-5">
+                    <p class="text-white mb-5">It is the old motor industry adage that people buy from people, but these days we know that people only buy from the BEST people and there is no better than at McCarthy Toyota Midrand. For all your motor needs; from Purchasing your Brand New Toyota, to servicing it and using Toyota genuine Parts, to our wide range of Pre-Owned vehicles you can be guaranteed that you will be dealing with the right people.</p>
+                     <a href="javascript:void(0)" class="btn btn-secondary mb-5 text-uppercase">Find a Bidvest McCarthy Dealership</a>
+                </div>
+            </div>
+        </div>
+        
+    </section>
+    <section class="car-specials my-5">
+        <div class="container">
+            <div class="row my-4">
+                <div class="col">
+                    <div class="display-4">Special Offers</div>
+<!--                    <div class="h4 light">Exclusive deals of other similar models to the IS 200T EX</div>      -->
+                </div>  
+            </div>
+            <div class="row mx-auto text-center">
+                <div class="col-4 car-special-item">
+                    <img src="/images/specials-1.jpg" alt="" class="img-fluid">
+                    <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
+                    <span class="">R670 700</span>
+                    <span class="">R28 000</span>
+                </div>
+                <div class="col-4 car-special-item">
+                    <img src="/images/specials-2.jpg" alt="" class="img-fluid">
+                    <span class="">GS300EX (Auto)</span>
+                    <span class="">R770 700</span>
+                    <span class="">R30 000</span>
+                </div>
+                <div class="col-4 car-special-item">
+                    <img src="/images/specials-3.jpg" alt="" class="img-fluid">
+                    <span class="">NX 300 E</span>
+                    <span class="">R599 700</span>
+                    <span class="">R20 000</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bidvest-insurance">
+        <div class="container">
+                   <div class="row my-5">
+                       <div class="col"><img src="/images/bidvest-club-mccarthy-logo.png" alt="" class="img-fluid mt-5"></div>
+                   </div>
+                    <div class="row my-5 p-4 d-flex align-items-center text-center w-75-sm-up">
+                        <div class="col-2">
+                            <img src="/images/mechanical-warranty.png" alt="" class="img-fluid">
+                            <p>Mechanical Warranty</p>
+                        </div> 
+                        <div class="col-2">
+                            <img src="/images/bodyguard.png" alt="" class="img-fluid">
+                            <p>Body Guard</p>
+                        </div> 
+                        <div class="col-2">
+                            <img src="/images/tyre-guard.png" alt="" class="img-fluid">
+                            <p>Tyre Guard</p>
+                        </div> 
+                        <div class="col-2">
+                            <img src="/images/theftbuster-plus.png" alt="" class="img-fluid">
+                            <p>Theftbuster Plus</p>
+                        </div> 
+                        <div class="col-2">
+                            <img src="/images/shortfall.png" alt="" class="img-fluid">
+                            <p>Shortfall Protection</p>
+                        </div>
+                    </div>
+                    <div class="row my-5 d-flex align-items-center text-center w-75-sm-up">
+                        <div class="col-2">
+                            <img src="/images/maintenance-plan.png" alt="" class="img-fluid">
+                            <p>Maintenance Plan</p>
+                        </div>
+                        <div class="col-2">
+                            <img src="/images/service-plan.png" alt="" class="img-fluid">
+                            <p>Service Plan</p>
+                        </div>
+                        <div class="col-2">
+                            <img src="/images/keyguard.png" alt="" class="img-fluid">
+                            <p>Key Guard</p>
+                        </div>
+                        <div class="col-2">
+                            <img src="/images/service-plan-booster.png" alt="" class="img-fluid">
+                            <p>Service Plan Booster</p>
+                        </div>
+                    </div>
+                    <div class="row my-5">
+                        <div class="col">
+                            <a href="javascript:void(0)" class="btn btn-secondary mb-3">Apply for Bidvest Insurance</a>
+                        </div>
+                    </div>
+                </div>
+    </section>
+    
+</div>
 
-<header class="full-bg full-tint dark">
-	<video autoplay muted loop id="myVideo">
-		<source src="~/videos/LC500_wow.mp4" type="video/mp4">
-		Your browser does not support HTML5 video.
-	</video>
-	<div class="wrap container">
-		<div class="content center-left text-white text-center">
-			<button id="myBtn" onclick="myFunction()" class="btn btn-primary">Pause</button>
-		</div>
-	</div>
-</header>		
-
-
-
-@section Scripts {
-<script>
-	var video = document.getElementById("myVideo");
-	var btn = document.getElementById("myBtn");
-	
-	function myFunction() {
-	  if (video.paused) {
-	    video.play();
-	    btn.innerHTML = "Pause";
-	  } else {
-	    video.pause();
-	    btn.innerHTML = "Play";
-	  }
-	}
-</script>
-}
