--- a/Views/Home/model-name.cshtml
+++ b/Views/Home/model-name.cshtml
@@ -7,18 +7,21 @@
     <div class="main-cta">
         <div class="car-specs mx-auto text-center">
             <ul class="list-inline">
-                <li class="list-inline-item"><span> <img src="/images/phone-white.png" alt="">Midrand</span></li>
+                <li class="list-inline-item">
+                    <span><img src="/images/phone-white.png" alt="">Midrand</span>
+<!--                    <span>012 543 1235</span>-->
+                </li>
                 <li class="list-inline-item"><span> <img src="/images/location-white.png" alt="">Find a Dealer</span></li>
                 <li class="list-inline-item"><span> <img src="/images/book-test-drive-white.png" alt="">Book a Test Drive</span></li>
                 
             </ul>    
         </div> 
     </div>
-    <section class="section hero">
+    <section class="hero">
         <header class="parallax-window use-parallax-mirror" data-parallax="scroll" data-image-src="/images/lexusIS_headerBG.jpg">
             <div class="parallax-section parallax">
                 <div class="container-fluid">
-                    <div class="row d-flex align-items-center h100" style="height:100vh;">
+                    <div class="row d-flex align-items-center" style="height:100vh;">
                         <div class="col offset-1">
                             <h1 class="display-2 text-white text-capitalize">Lexus <span>IS</span></h1>
                             <div class="h3 text-white light">Uncommon Design.</div>
@@ -29,9 +32,9 @@
             </div>
         </header>
     </section> 
-    <section class="section car-info-table">
+    <section class="car-info-table my-4">
         <div class="container-fluid px-5">
-           <div class="main-cta-stick mt-0">
+           <div class="main-cta-stick mt-0" id="stickytypeheader">
                 <div class="car-specs">
                     <ul class="list-inline">
                         <li class="list-inline-item"><span><a href="">Lexus IS</a></span></li>
@@ -40,34 +43,85 @@
                     </ul>    
                 </div> 
             </div>
-<!--
-            <div class="row">
-               <div class="col-2">
-                   <ul class="nav nav-tabs" id="installments-info" role="tablist">
-                      <li class="nav-item">
-                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"><span>IS 200T E</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"><span>IS 200T EX</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"><span>IS 350 F Sport</span></a>
-                      </li>
-                    </ul>
-               </div>
-                   <div class="col-9">
-                       <h1 class="display-4">IS 200 T EX</h1>
-                       <span class="h4">R 787 000</span>    
-                    </div>   
-               </div>
--->
-            <div class="car-specs-model mx-auto text-center">
-                <ul class="list-inline">
-                    <li class="list-inline-item"><p></p><span>7.0s</span></li>
-                    <li class="list-inline-item"><p></p><span>8</span></li>
-                    <li class="list-inline-item"><p></p><span>175</span></li>
-                </ul>    
-            </div> 
+            <div class="row my-5">
+                <div class="col-2">
+
+                </div> 
+                
+            </div>
+            <div class="float-left" style="height:300px">
+                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true"><span>IS 200T E</span></a>
+                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false"><span>IS 200T EX</span></a>
+                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">IS 350 F Sport</a>
+                </div>
+            </div>
+            <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                    <div class="row mt-4">
+                        <div class="col-4 text-right">
+                            <h1 class="display-4">IS 200T E</h1>
+                            <span class="h4">R 787 000</span>
+                        </div>
+
+                        <div class="col-6">
+                            <div class="car-specs-model text-left">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <p></p><span>7.0s</span></li>
+                                    <li class="list-inline-item">
+                                        <p></p><span>230</span></li>
+                                    <li class="list-inline-item">
+                                        <p></p><span>175</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                    <div class="row mt-4">
+                        <div class="col-4 text-right">
+                            <h1 class="display-4">IS 200T EX</h1>
+                            <span class="h4">R 787 000</span>
+                        </div>
+
+                        <div class="col-6">
+                            <div class="car-specs-model text-left">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <p></p><span>7.0s</span></li>
+                                    <li class="list-inline-item">
+                                        <p></p><span>230</span></li>
+                                    <li class="list-inline-item">
+                                        <p></p><span>175</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+                    <div class="row mt-4">
+                        <div class="col-4 text-right">
+                            <h1 class="display-4">IS 350 F SPORT</h1>
+                            <span class="h4">R 987 000</span>
+                        </div>
+
+                        <div class="col-6">
+                            <div class="car-specs-model text-left">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <p></p><span>5.9s</span></li>
+                                    <li class="list-inline-item">
+                                        <p></p><span>225</span></li>
+                                    <li class="list-inline-item">
+                                        <p></p><span>225</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
             <div class="car-model-pic mx-auto wrap">
               <img src="/images/Madder-Red-A00914.png" alt="" class="img-fluid">  
             </div>
@@ -78,9 +132,7 @@
                     <li class="list-inline-item"><span class="madder-red"></span></li>
                     <li class="list-inline-item"><span class="mercury-grey"></span></li>
                     <li class="list-inline-item"><span class="sonic-quartz"></span></li>
-                    <li class="list-inline-item"><span class="platinum-silver"></span></li>
-                    
-                         
+                    <li class="list-inline-item"><span class="platinum-silver"></span></li>      
                 </ul>  
                 <p>Morello Red</p>
             </div>
@@ -92,7 +144,7 @@
                 <div class="container-fluid">
                     <div class="row car-features-row">
                         <div class="col-6 offset-1">
-                           <ul>
+                           <ul class="wheels">
                                <li>A 17" Alloy wheel design with five twisted twin-spokes produces an elegant look to the IS.</li>
                                <li>LED Daytime Running Headlamp in the signature Lexus arrowhead that is designed to clearly light the way. </li>
                                <li>The IS boasts Electrically Adjustable Mirrors, which are retractable, colour-coded and heated. </li>
@@ -109,7 +161,7 @@
                 <div class="container">
                     <div class="row car-features-row float-right">
                         <div class="col">
-                           <ul>
+                           <ul class="steering">
                                <li>A 17" Alloy wheel design with five twisted twin-spokes produces an elegant look to the IS.</li>
                                <li>LED Daytime Running Headlamp in the signature Lexus arrowhead that is designed to clearly light the way. </li>
                                <li>The IS boasts Electrically Adjustable Mirrors, which are retractable, colour-coded and heated. </li>
@@ -126,7 +178,7 @@
                 <div class="container">
                     <div class="row car-features-row">
                         <div class="col">
-                           <ul>
+                           <ul class="seat">
                                <li>A 17" Alloy wheel design with five twisted twin-spokes produces an elegant look to the IS.</li>
                                <li>LED Daytime Running Headlamp in the signature Lexus arrowhead that is designed to clearly light the way. </li>
                                <li>The IS boasts Electrically Adjustable Mirrors, which are retractable, colour-coded and heated. </li>
@@ -238,36 +290,7 @@
                </div>
            </div>
     </section>
-    <section class="car-specials my-5">
-        <div class="container">
-            <div class="row my-4">
-                <div class="col">
-                    <div class="display-4">Special Offers</div>
-                    <div class="h4 light">Exclusive deals of other similar models to the IS 200T EX</div>      
-                </div>  
-            </div>
-            <div class="row mx-auto text-center">
-                <div class="col-4 car-special-item">
-                    <img src="/images/specials-1.jpg" alt="" class="img-fluid">
-                    <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
-                    <span class="">R670 700</span>
-                    <span class="">R28 000</span>
-                </div>
-                <div class="col-4 car-special-item">
-                    <img src="/images/specials-2.jpg" alt="" class="img-fluid">
-                    <span class="">GS300EX (Auto)</span>
-                    <span class="">R770 700</span>
-                    <span class="">R30 000</span>
-                </div>
-                <div class="col-4 car-special-item">
-                    <img src="/images/specials-3.jpg" alt="" class="img-fluid">
-                    <span class="">NX 300 E</span>
-                    <span class="">R599 700</span>
-                    <span class="">R20 000</span>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <hr class="stitch-1">
     <section class="car-dealerships my-4">
         <div class="container">
@@ -330,7 +353,28 @@
     </section>
     
     
+
+
     
 
+
+@section Scripts {
+<script>
+	$(function(){
+    var stickyHeaderTop = $('#stickytypeheader').offset().top;
+    $(window).scroll(function(){
+        if( $(window).scrollTop() > stickyHeaderTop ) {
+                $('#stickytypeheader').css({position: 'fixed', top: '65px', color: 'white', background: 'rgba(0, 0, 0, 0.7)', border: '0'});
+                $('#sticky').css('display', 'block');
+                $('.list-inline-item a').css({color: 'white'});   
+        } else {
+                $('#stickytypeheader').css({position: 'static', top: '0', background: 'transparent', borderBottom: '2px solid rgba(0, 0, 0, 0.7)'});
+                $('#sticky').css('display', 'none');
+                $('.list-inline-item a').css({color: 'white'}); 
+        }
+    });
+});
+</script>
+}
 
 
