--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -5,7 +5,7 @@
 <div class="bg"></div>
 <div class="models">
     <section class="section sedans">
-       <div class="stitching"><img src="" alt=""></div>
+       <div class="stitch-2"></div>
         <div class="container px-5">
             <div class="row my-5">
                 <div class="col-3">
@@ -19,18 +19,43 @@
                     <div class="car-specs-model mx-auto text-center">
                         <ul class="list-inline">
                             <a href="/model-name">
-                               <li class="list-inline-item active is" style="background-image: url('/images/is-slant.png')">
+                                <li class="list-inline-item active" style="background-image: url('/images/is-slant.png')">
                                     <span>R601 900</span>
                                     <span>IS</span>
                                 </li>
                             </a>
-                            <a href=""><li class="list-inline-item es"><span></span><span>ES</span></li></a>
-                            <a href=""><li class="list-inline-item" style="background-image: url('/images/empty.png')"><span></span><span>Es</span></li></a>
-                           <a href=""> <li class="list-inline-item" style="background-image: url('/images/empty.png')"><span></span><span>GS</span></li></a>
-                            <a href=""><li class="list-inline-item" style="background-image: url('/images/empty.png')"><span></span><span>LS</span></li></a>
-                            <a href=""><li class="list-inline-item" style="background-image: url('/images/empty.png')"><span></span><span>CT</span></li></a>
-                        </ul>    
-                    </div> 
+                            <a href="">
+                                <li class="list-inline-item">
+                                    <span></span>
+                                    <span>ES</span>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li class="list-inline-item" style="background-image: url('')">
+                                    <span></span>
+                                    <span>ES</span>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li class="list-inline-item" style="background-image: url('/images/empty.png')">
+                                    <span></span>
+                                    <span>GS</span>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li class="list-inline-item" style="background-image: url('/images/empty.png')">
+                                    <span></span>
+                                    <span>LS</span>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li class="list-inline-item" style="background-image: url('/images/empty.png')">
+                                    <span></span>
+                                    <span>CT</span>
+                                </li>
+                            </a>
+                        </ul>
+                    </div>
                     <div class="car-model-pic mx-auto">
                       <img src="/images/IS-1.png" alt="" class="img-fluid">  
                       <img src="/images/IS-2.png" alt="" class="img-fluid">  
@@ -41,6 +66,8 @@
         </div>
     </section>
     <section class="section suvs angle--both-left-left">
+       <div class="stitch-3"></div>
+       <div class="stitch-4"></div>
         <div class="container px-5">
             <div class="row my-5">
                 <div class="col-3">
@@ -77,8 +104,11 @@
             </div>
         </div>
     </section>
-    <section class="section coupes angle--top-right text-white">
+    
+    <section class="section coupes text-white">
         <div class="container px-5">
+            <div class="stitch-5"><img src="/images/stitch-5.png" alt=""></div>
+            <div class="stitch-6"><img src="/images/stitch-6.png" alt=""></div>
             <div class="row my-5">
                 <div class="col-3">
                   <h1 class="display-4">Coupes</h1>  
@@ -109,8 +139,8 @@
             </div>
         </div>
     </section>
-    <div class="stitch-1"></div>
     <section class="car-dealerships my-5">
+        <div class="stitch-7"></div>
         <div class="container">
             <div class="row">
                 <div class="row my-4">
