--- a/Views/Shared/navigation.cshtml
+++ b/Views/Shared/navigation.cshtml
@@ -10,13 +10,12 @@
           <ul class="navbar-nav ml-auto">
 <!--		      <li class="nav-item"><a class="nav-link" href="/components"><span>Components</span></a></li>-->
 		      <li class="nav-item"><a class="nav-link" href="/"><span>Home</span></a></li>
-		      <li class="nav-item"><a class="nav-link" href=""><span>Specials</span></a></li>
-		      <li class="nav-item"><a class="nav-link" href="/models"><span>Models</span></a></li>
-              <li class="nav-item"><a class="nav-link" href=""><span>New Cars</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/specials"><span>Specials</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/models"><span>New Cars</span></a></li>
 		      <li class="nav-item"><a class="nav-link" href="/pre-owned"><span><span>Used</span></span></a></li>
-		      <li class="nav-item"><a class="nav-link" href=""><span>Demo</span></a></li>
-		      <li class="nav-item"><a class="nav-link" href=""><span>Service</span></a></li>
-		      <li class="nav-item"><a class="nav-link" href=""><span>Dealers</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="pre-owned"><span>Demo</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/service"><span>Service</span></a></li>
+		      <li class="nav-item"><a class="nav-link" href="/Dealers"><span>Dealers</span></a></li>
 		      
     	  </ul>
   		</div>
