--- a/wwwroot/scss/bootstrap/mixins/_slanted-edges-2.scss
+++ b/wwwroot/scss/bootstrap/mixins/_slanted-edges-2.scss
@@ -1,3 +1,12 @@
+ @mixin rotate($degrees) {
+    -webkit-transform: rotate($degrees);
+    -moz-transform: rotate($degrees);
+    -ms-transform: rotate($degrees);
+    -o-transform: rotate($degrees);
+    transform: rotate($degrees);
+    
+} 
+
 
 // $angle: The angle in degrees: 1 - 45
 // $angle-position-y: The Y position of the angle: top | bottom | both
