--- a/wwwroot/scss/lexus.scss
+++ b/wwwroot/scss/lexus.scss
@@ -56,6 +56,8 @@ html,
 @import "bootstrap/mixins/slanted-edges-2";
 
 //Pages
+@import "pages/home"; 
 @import "pages/pre-owned"; 
 @import "pages/models"; 
+
 
