--- a/wwwroot/scss/pages/models.scss
+++ b/wwwroot/scss/pages/models.scss
@@ -1,8 +1,7 @@
 body { 
     background-image: url('/images/white_leather.png');
+    margin-top:0;
 }
-
-
 
 .models {  
     .car-specs-model { 
@@ -160,6 +159,13 @@ body {
         
     }
     .car-dealerships { 
+        
+        .stitch-7 { 
+            background-image: url(/images/stitch-2.png); 
+            width: 100%;
+            height: 20px;
+            margin-top: -38px;
+        }
         .card {       
             img.midrand-map  {
                 display: none;
@@ -196,15 +202,91 @@ body {
         }
     }
     
+    .sedans { 
+        background: url('/images/sedan-bg.jpg');
+        background-size: cover;
+        padding-bottom: 140px;
+        overflow: hidden;
+        .stitch-2 { 
+            background-image: url('/images/sedan-panel.png');
+            position: absolute;
+            right:0;
+            top:-60px;
+            height:100%;
+            width:15px;
+            @include rotate(-45deg);
+        }
+    }
     .suvs { 
-        background:rgba(0, 0, 0, 0.4);
+        background-image: url('/images/grey_leather.png');
         padding-top: 100px;
         padding-bottom: 220px;
         overflow: hidden;
+        margin-top: -124px;
+        z-index: 2;
+        
+            &:before { 
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: linear-gradient(90deg, #333333, rgba(255, 255, 255, 0));
+            opacity: .6;
+            }
+        
+        .stitch-3 { 
+            background-image: url('/images/stitch-3.png');
+            position: absolute;
+            left:0;
+            top:-60px;
+            height:100%;
+            width:15px;
+            @include rotate(30deg);
+        }
+        .stitch-4 { 
+            background-image: url('/images/stitch-4.png');
+            position: absolute;
+            right:50px; 
+            top:0;
+            height:100%;
+            width:15px;
+            @include rotate(180deg);
+        }
     }
     .coupes { 
-        background:rgba(0, 0, 0, 0.7);
-        margin-top: -123px;  
+        background-image: url('/images/dark_leather.png');
+        margin-top: -122px; 
+        z-index: 1;
+        overflow: hidden;
+        &:before { 
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: linear-gradient(90deg, #101010, rgba(255, 255, 255, 0));
+            opacity: .6;
+            }
+        .stitch-5 { 
+            background-image: url('/images/stitch-5.png');
+            position: absolute;
+            left:50px; 
+            top:0;
+            height:100%;
+            width:15px;
+            @include rotate(180deg);
+        }
+        .stitch-6 { 
+            background-image: url(/images/stitch-6.png);
+            position: absolute;
+            right: 220px;
+            top: 384px;
+            height: 100%;
+            width: 15px;
+        }
 
         .list-inline-item { 
             span{color:white!important}
@@ -250,17 +332,20 @@ body {
     .main-cta-stick {
         height: 60px;
         transform: skewX(-20deg);
-        z-index: 1000;
+        z-index: 10;
         border-bottom:2px solid #565656;
+        width: 100%;
         .car-specs { 
             .list-inline {
                 text-transform: uppercase;
-          
-               
-                
+                color:white;
+
                 & .list-inline-item {   
                     height: 60px;
                     width:auto;
+                    a { 
+                        color:black;
+                    }
                     span {
                         display: block;
                         font-size: 1.2em;
@@ -275,31 +360,26 @@ body {
                 & .list-inline-item:first-child {     
                     background:rgba(0, 0, 0, 0.7);
                     a {
-                        color:white; 
+                        color:white!important; 
                     }
                 }
-                
-                & .list-inline-item:hover { 
-                    background:$gray-300;
-                    color:black;
-                    height: 58px;
-                     a {
-                    color:black; 
-                    text-decoration: none;
-                    
-                    &:hover { 
-                        color:black;  
+            
+                & .list-inline-item:hover {                   
+                    color:white;
+                    height: 58px;                  
+                    a {
+                        text-decoration: none;
+                        &:hover { 
+                            color:white;  
+                        }
                     }
                 }
-                }
-
             }
         }
     }
     .car-specs-model { 
         .list-inline {
-            margin-top: 20px;
-            
+           
             .list-inline-item {    
                 margin: 0px -2px;
                 min-width: 179px;
@@ -311,6 +391,7 @@ body {
                     font-size:1.5em;
                     margin-top:20px;
                     transform: skewX(20deg);
+                    text-align: center;
                 }
                 span {
                     display: block; 
@@ -440,9 +521,14 @@ body {
                 color:white;
                 font-weight: 400; 
                 @extend .light;
+            
+                &.wheels { list-style-image: url('/images/wheel-icon.png');}
+                &.steering { list-style-image: url('/images/steering-wheel.png');}
+                &.seat { list-style-image: url('/images/car-seat.png');}
                     
                 li { 
                    margin:30px 0; 
+                   
                 }
             }  
         }
@@ -511,5 +597,3 @@ body {
         }
     }
 }
-
-
