Home Page Changes

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,30 +8,30 @@
                        <div class="col"><img src="/images/bidvest-club-mccarthy-logo.png" alt="" class="img-fluid mt-5"></div>
                    </div>
                     <div class="row my-5 d-flex align-items-center text-center">
-                        <div class="col-2">
+                        <div class="col col-sm-2">
                             <img src="/images/medical-assistance.png" alt="" class="img-fluid">
                             <p>24/7 Professional Emergency Assistance on road or at home</p>
-                        </div> <div class="col-2">
+                        </div> <div class="col col-sm-2">
                             <img src="/images/giveaways.png" alt="" class="img-fluid">
                             <p>Exclusive Giveaways and Discount on travel.</p>
                         </div> 
-                        <div class="col-2">
+                        <div class="col col-sm-2">
                             <img src="/images/gps-app.png" alt="" class="img-fluid">
                             <p>McCarthy App with GPS to help get our emergency team faster to you.</p>
                         </div> 
-                        <div class="col-2">
+                        <div class="col col-sm-2">
                             <img src="/images/emergency-assistance.png" alt="" class="img-fluid">
                             <p>Medical Emergency Assistance</p>
                         </div> 
-                        <div class="col-2">
+                        <div class="col col-sm-2 d-none d-sm-block">
                             <img src="/images/legal.png" alt="" class="img-fluid">
                             <p>Legal Advice Assistance.</p>
                         </div>
                     </div>
                     <div class="row my-5">
-                        <div class="col">
-                            <a href="javascript:void(0)" class="btn btn-secondary mb-3">Join Bidvest Club McCarthy</a>
-                            <p>Get 1 Year free membership with every Lexus purchase</p>
+                        <div class="col-sm-8 col-md-6 col-lg-4">
+                            <a href="javascript:void(0)" class="btn btn-secondary mb-3 mx-auto d-block">Join Bidvest Club McCarthy</a>
+                            <p class="text-xs-center">Get 1 Year free membership with every Lexus purchase</p>
                         </div>
                     </div>
                 </div>
@@ -39,17 +39,18 @@
     <section class="models">
         <div class="container-fluid">
             <div class="row mt-5">
-                <div class="col-4">
+                <div class="col">
                     <h2 class="display-4">Sedan</h2>
                     <p class="h5 light">Best of all worlds</p>
                     <span></span>
+                   
                 </div>
-                <div class="col-4">
+                <div class="col">
                     <h2 class="display-4">Suvs</h2>
                     <p class="h5 light">Luxury Expanded</p>
                     <span></span>
                 </div>
-                <div class="col-4">
+                <div class="col">
                     <h2 class="display-4">Coupes</h2>
                     <p class="h5 light">More than a car. A feeling</p>
                     <span></span>
@@ -77,20 +78,20 @@
 <!--                    <div class="h4 light">Exclusive deals of other similar models to the IS 200T EX</div>      -->
                 </div>  
             </div>
-            <div class="row mx-auto text-center">
-                <div class="col-4 car-special-item">
+            <div class="row mx-auto w-100-md-down">
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
                     <img src="/images/specials-1.jpg" alt="" class="img-fluid">
                     <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
                     <span class="">R670 700</span>
                     <span class="">R28 000</span>
                 </div>
-                <div class="col-4 car-special-item">
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
                     <img src="/images/specials-2.jpg" alt="" class="img-fluid">
                     <span class="">GS300EX (Auto)</span>
                     <span class="">R770 700</span>
                     <span class="">R30 000</span>
                 </div>
-                <div class="col-4 car-special-item">
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
                     <img src="/images/specials-3.jpg" alt="" class="img-fluid">
                     <span class="">NX 300 E</span>
                     <span class="">R599 700</span>
@@ -100,56 +101,58 @@
         </div>
     </section>
     <section class="bidvest-insurance">
-        <div class="container">
-                   <div class="row my-5">
-                       <div class="col"><img src="/images/bidvest-club-mccarthy-logo.png" alt="" class="img-fluid mt-5"></div>
-                   </div>
-                    <div class="row my-5 p-4 d-flex align-items-center text-center w-75-sm-up">
-                        <div class="col-2">
-                            <img src="/images/mechanical-warranty.png" alt="" class="img-fluid">
-                            <p>Mechanical Warranty</p>
-                        </div> 
-                        <div class="col-2">
-                            <img src="/images/bodyguard.png" alt="" class="img-fluid">
-                            <p>Body Guard</p>
-                        </div> 
-                        <div class="col-2">
-                            <img src="/images/tyre-guard.png" alt="" class="img-fluid">
-                            <p>Tyre Guard</p>
-                        </div> 
-                        <div class="col-2">
-                            <img src="/images/theftbuster-plus.png" alt="" class="img-fluid">
-                            <p>Theftbuster Plus</p>
-                        </div> 
-                        <div class="col-2">
-                            <img src="/images/shortfall.png" alt="" class="img-fluid">
-                            <p>Shortfall Protection</p>
-                        </div>
-                    </div>
-                    <div class="row my-5 d-flex align-items-center text-center w-75-sm-up">
-                        <div class="col-2">
-                            <img src="/images/maintenance-plan.png" alt="" class="img-fluid">
-                            <p>Maintenance Plan</p>
-                        </div>
-                        <div class="col-2">
-                            <img src="/images/service-plan.png" alt="" class="img-fluid">
-                            <p>Service Plan</p>
-                        </div>
-                        <div class="col-2">
-                            <img src="/images/keyguard.png" alt="" class="img-fluid">
-                            <p>Key Guard</p>
-                        </div>
-                        <div class="col-2">
-                            <img src="/images/service-plan-booster.png" alt="" class="img-fluid">
-                            <p>Service Plan Booster</p>
-                        </div>
-                    </div>
-                    <div class="row my-5">
-                        <div class="col">
-                            <a href="javascript:void(0)" class="btn btn-secondary mb-3">Apply for Bidvest Insurance</a>
-                        </div>
-                    </div>
+        <div class="container">    
+            <div class="row my-5">
+               <div class="col">
+                   <img src="/images/bidvest-club-mccarthy-logo.png" width="250" alt="" class="img-fluid mt-5">
+               </div>
+            </div>
+            <div class="row my-5 d-flex align-items-center w-75-sm-up">
+                <div class="col-2">
+                    <img src="/images/mechanical-warranty.png" alt="" class="img-fluid">
+                    <p>Mechanical Warranty</p>
+                </div> 
+                <div class="col-2">
+                    <img src="/images/bodyguard.png" alt="" class="img-fluid">
+                    <p>Body Guard</p>
+                </div> 
+                <div class="col-2">
+                    <img src="/images/tyre-guard.png" alt="" class="img-fluid">
+                    <p>Tyre Guard</p>
+                </div> 
+                <div class="col-2">
+                    <img src="/images/theftbuster-plus.png" alt="" class="img-fluid">
+                    <p>Theftbuster Plus</p>
+                </div> 
+                <div class="col-2">
+                    <img src="/images/shortfall.png" alt="" class="img-fluid">
+                    <p>Shortfall Protection</p>
                 </div>
+            </div>
+            <div class="row my-5 d-flex align-items-center w-75-sm-up">
+                <div class="col-2">
+                    <img src="/images/maintenance-plan.png" alt="" class="img-fluid">
+                    <p>Maintenance Plan</p>
+                </div>
+                <div class="col-2">
+                    <img src="/images/service-plan.png" alt="" class="img-fluid">
+                    <p>Service Plan</p>
+                </div>
+                <div class="col-2">
+                    <img src="/images/keyguard.png" alt="" class="img-fluid">
+                    <p>Key Guard</p>
+                </div>
+                <div class="col-2">
+                    <img src="/images/service-plan-booster.png" alt="" class="img-fluid">
+                    <p>Service Plan Booster</p>
+                </div>
+            </div>
+            <div class="row my-5">
+                <div class="col-sm-8 col-md-6 col-lg-4">
+                    <a href="javascript:void(0)" class="btn btn-secondary mb-3 mx-auto d-block">Apply for Bidvest Insurance</a>
+                </div>
+            </div>
+        </div>
     </section>
     
 </div>
