--- a/Views/Shared/footer.cshtml
+++ b/Views/Shared/footer.cshtml
@@ -1,5 +1,69 @@
-﻿<footer class="bg-black py-3 text-center">
-	<a href="/" alt="Lexus"><img src="~/images/lexus-white.svg" /></a>
+﻿<footer class="p-5">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-3">
+                        <ul class="list-unstyled">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Specials</a></li>
+                            <li><a href="">Service</a></li>
+                            <li><a href="">Team</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-unstyled">
+                            <li><a href="">New Cars</a></li>
+                            <li><a href="">Sedans</a></li>
+                            <li><a href="">SUV'S</a></li>
+                            <li><a href="">Coupes</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-unstyled">
+                            <li><a href="">Used</a></li>
+                            <li><a href="">Sedans</a></li>
+                            <li><a href="">SUV's</a></li>
+                            <li><a href="">Coupses</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-unstyled">
+                            <li><a href="">Used</a></li>
+                            <li><a href="">Sedans</a></li>
+                            <li><a href="">SUV's</a></li>
+                            <li><a href="">Coupses</a></li>
+                        </ul>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="col-md-6 offset-2">
+                <div class="row justify-content-end w-100">
+                    <div class="col-3">
+                        <ul class="list-unstyled">
+                            <li><a href="">Terms & Conditions</a></li>
+                            <li><a href="">Club McCarthy</a></li>
+                            <li><a href="">Bidvest Insurance</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-unstyled">
+                            <li><a href="">Privacy Policy</a></li>
+                            <li><a href="">McCarthy</a></li>
+                            <li><a href="">My Lexus App</a></li>              
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col">
+                <img src="/images/bidvest-club-mccarthy-logo.png" alt="" height="50" class="mr-4">
+                <img src="/images/lexus-logo-2.png">
+            </div>
+        </div>
+    </div>
 </footer>
 
 <div class="query"></div>
