--- a/Views/Shared/pre-owned-facets.cshtml
+++ b/Views/Shared/pre-owned-facets.cshtml
@@ -29,7 +29,7 @@
         </div>
     
     </div>
-    <p>Select Models</p>
+    <p>Models</p>
     <div class="search-list">
         <div>
             <a href="/cars/lexus-ct/keywords/lexus/">CT</a>
