--- a/wwwroot/css/lexus.css
+++ b/wwwroot/css/lexus.css
@@ -9694,6 +9694,10 @@ h6 .gray, .h6.gray,
 p {
   max-width: 635px; }
 
+@media (max-width: 767px) {
+  .text-xs-center {
+    text-align: center; } }
+
 #main-nav.navbar {
   padding: 0;
   height: 65px;
@@ -9787,8 +9791,16 @@ header,
     min-height: 100%;
     z-index: 1; }
 
-footer img {
-  height: 30px; }
+footer {
+  text-transform: uppercase;
+  font-size: 0.8em;
+  background: #0f264b; }
+  footer li {
+    padding: 4px 0; }
+  footer a {
+    color: white; }
+  footer img {
+    height: 30px; }
 
 .logoSVG {
   display: none; }
@@ -10233,23 +10245,23 @@ label {
   margin-top: -164px;
   text-transform: uppercase;
   color: white; }
-  .home-page .models .col-4 {
+  .home-page .models .col {
     height: 520px;
     padding: 132px 60px; }
-  .home-page .models .col-4:nth-of-type(1) {
+  .home-page .models .col:nth-of-type(1) {
     background-image: url("/images/sedan.jpg");
     background-size: cover; }
-    .home-page .models .col-4:nth-of-type(1) span {
+    .home-page .models .col:nth-of-type(1) span {
       display: none; }
-    .home-page .models .col-4:nth-of-type(1):hover span:before {
+    .home-page .models .col:nth-of-type(1):hover span:before {
       display: block;
       content: 'arrow';
       position: absolute;
       top: 30px; }
-  .home-page .models .col-4:nth-of-type(2) {
+  .home-page .models .col:nth-of-type(2) {
     background-image: url("/images/suv.jpg");
     background-size: cover; }
-  .home-page .models .col-4:nth-of-type(3) {
+  .home-page .models .col:nth-of-type(3) {
     background-image: url("/images/coupe.jpg");
     background-size: cover; }
 
@@ -10266,32 +10278,34 @@ label {
 
 .home-page .car-specials {
   position: relative; }
-  .home-page .car-specials .car-special-item img {
-    box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.37);
-    border-radius: 8px; }
-  .home-page .car-specials .car-special-item span:nth-of-type(1) {
-    position: absolute;
-    top: 12px;
-    left: 30px;
-    font-size: 1.2em;
-    font-weight: bold; }
-  .home-page .car-specials .car-special-item span:nth-of-type(2) {
-    position: absolute;
-    top: 52px;
-    left: 30px;
-    font-size: 2em;
-    font-weight: bold; }
-  .home-page .car-specials .car-special-item span:nth-of-type(3) {
-    font-size: 1.1em;
-    position: absolute;
-    top: 94px;
-    left: 30px;
-    font-weight: normal; }
-    .home-page .car-specials .car-special-item span:nth-of-type(3):before {
-      content: 'SAVE';
-      display: block;
-      text-align: left;
-      margin-bottom: -5px; }
+  .home-page .car-specials .car-special-item {
+    margin: 20px 0; }
+    .home-page .car-specials .car-special-item img {
+      box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.37);
+      border-radius: 8px; }
+    .home-page .car-specials .car-special-item span:nth-of-type(1) {
+      position: absolute;
+      top: 12px;
+      left: 30px;
+      font-size: 1.2em;
+      font-weight: bold; }
+    .home-page .car-specials .car-special-item span:nth-of-type(2) {
+      position: absolute;
+      top: 52px;
+      left: 30px;
+      font-size: 2em;
+      font-weight: bold; }
+    .home-page .car-specials .car-special-item span:nth-of-type(3) {
+      font-size: 1.1em;
+      position: absolute;
+      top: 94px;
+      left: 30px;
+      font-weight: normal; }
+      .home-page .car-specials .car-special-item span:nth-of-type(3):before {
+        content: 'SAVE';
+        display: block;
+        text-align: left;
+        margin-bottom: -5px; }
 
 .results .breadcrumb {
   margin-left: 300px;
@@ -10911,6 +10925,7 @@ body {
   transform: skewX(-20deg);
   z-index: 1000; }
   .models-detail .main-cta .car-specs .list-inline {
+    color: white;
     text-transform: uppercase; }
     .models-detail .main-cta .car-specs .list-inline .list-inline-item {
       min-width: 120px;
@@ -10925,6 +10940,9 @@ body {
         padding-top: 16px; }
         .models-detail .main-cta .car-specs .list-inline .list-inline-item span img {
           margin-right: 10px; }
+        .models-detail .main-cta .car-specs .list-inline .list-inline-item span a {
+          color: white;
+          text-decoration: none; }
     .models-detail .main-cta .car-specs .list-inline .list-inline-item:last-child {
       background: #428bca; }
 
